--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
   { name = "Alexander Gardner" }
 ]
 dependencies = [
-  "requests~=2.24.0"
+  "requests>=2.28.1,<3.0"
 ]
 requires-python = ">=3.7"
 
